--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,7 @@ language: python
 python:
   - 3.7
 install:
-  - pip install -q pipenv codecov
-  - pipenv sync --dev
-script:
+  - pip install -q -r requirements-dev.txt
+ script:
   - flake8
-  - pytest libpythonpro --cov=libpythonpro
-after_success:
-  - codecov
+
