--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -3,5 +3,12 @@ flake8==3.7.9
 mccabe==0.6.1
 pycodestyle==2.5.0
 pyflakes==2.2.0
+# deps do pytest
+py==1.8.1
+more-itertools==8.2.0
+six==1.14.0
+attrs==19.3.0
+pluggy==0.13.1
+pytest==5.4.2
 -r requirements.txt
 
